# SDKdemo

./: BUILD.md  CMakeLists.txt
doc/calc-help/: equations.md
doc/commands/: arithmetic.md  complex.md  constants.md  matrix.md  solvers.md
help/: db48x.md  db50x.md
sim/: CMakeLists.txt  sim-main.cpp  sim-screen.cpp  sim-screen.h  sim-window.cpp  sim-window.h  sim-window.ui
sim/android/: AndroidManifest.xml
src/: algebraic.cc  algebraic.h  arithmetic.cc  array.cc  array.h  command.cc  compare.cc  decimal.cc  expression.cc  expression.h  ids.tbl  integrate.cc  list.cc  list.h  menu.cc  object.cc  object.h  solve.cc  solve.h  tests.cc
src/dm32/: main.h
